Adjust mypy config

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,3 +20,14 @@ log_cli = True
 log_cli_level = INFO
 norecursedirs = .* doc out res routing *.egg-info venv
 testpaths = ./tests
+
+[mypy]
+disallow_any_decorated = true
+disallow_any_generics = true
+disallow_any_unimported = false
+disallow_subclassing_any = false
+disallow_untyped_calls = true
+disallow_untyped_defs = true
+ignore_missing_imports = true
+warn_unused_ignores = true
+warn_return_any = true
