--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,10 +1,19 @@
 repos:
-- repo: https://github.com/astral-sh/ruff-pre-commit
+-   repo: https://gitlab.com/vojko.pribudic.foss/pre-commit-update
+    rev: v0.6.1
+    hooks:
+    -   id: pre-commit-update
+-   repo: https://github.com/astral-sh/ruff-pre-commit
   # Ruff version.
-  rev: v0.9.1
-  hooks:
+    rev: v0.9.2
+    hooks:
     # Run the linter.
-    - id: ruff
-      args: [ --fix ]
+    -   id: ruff
+        args: [--fix]
     # Run the formatter.
-    - id: ruff-format
+    -   id: ruff-format
+-   repo: https://github.com/python-poetry/poetry
+    rev: 2.0.1
+    hooks:
+    -   id: poetry-check
+    -   id: poetry-lock
