--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,9 @@ version = "0.2.0"
 description = ""
 authors = ["rlipperts <rlipperts@techfak.uni-bielefeld.de>"]
 readme = "README.md"
+packages = [
+    { include = "python_package_template", from = "src" },
+]
 
 [tool.poetry.dependencies]
 python = "^3.12"
